--- a/_posts/2015/2015-11-02-hello.md
+++ b/_posts/2015/2015-11-02-hello.md
@@ -1,13 +1,11 @@
 ---
 layout: post
-title:  Hello
+title:  Sample post with Jekyll
 date: 2015-11-02 08:53:09
 tags:
  - test1
  - test2
 ---
-
-# This is test
 
 You'll find this post in your `_posts` directory - edit this post and re-build (or run with the `-w` switch) to see your changes!
 To add new posts, simply add a file in the `_posts` directory that follows the convention: YYYY-MM-DD-name-of-post.ext.
